# poetrytest

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: ci.yml
poetrytest/: asgi.py  settings.py  urls.py  wsgi.py
