[tool.poetry]
name = "poetrytest"
version = "0.1.0"
description = ""
authors = ["seunghwan13 <childwelfare23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0"
django-ninja = "0.16.1"
black = "21.12b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black] # 대괄호 부분을 section이라고 칭한다
line-length = 120